Fixed header height on mobile

--- a/website/src/app/app.component.scss
+++ b/website/src/app/app.component.scss
@@ -41,6 +41,7 @@ header {
     padding-bottom: 60px;
     box-shadow: 0px -2px 12px rgba(0, 0, 0, 0.75);
     text-align: center;
+    min-height: 4em;
 
     #tagline {
         font-size: 1.15em;
@@ -57,14 +58,13 @@ header {
         text-align: left;
         height: 100%;
         min-width: 100px;
-        min-height: 48px;
+        min-height: 3rem;
         max-width: 100%;
         max-height: 175px;
 
         @media screen and (max-width: 700px) {
             height: 100%;
             min-width: 80px;
-            min-height: 20px;
             max-width: 100%;
             max-height: 150px;
         }
